test:测试push自动打包